membuat project todolist

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <head>
         <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
         <title>Hello, World!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>
-            Hello, World!
-        </h1>
+        <div class="container">
+      		  <h1>
+    		       ToDoList
+      		  </h1>
+       	  <div class="items">         
+        				 <input type="text" class="inputField"><button type="button" class="addToDo">+</button>     
+        	 </div>                 
+ 		      	 <div class="todos"></div>     
+       </div>      
+       <script src="script.js"></script>
     </body>
 </html>
